Ubah teks button

--- a/Latihan1.html
+++ b/Latihan1.html
@@ -13,7 +13,7 @@
 <h1>Jovan Fedrico</h1>
 <p>TKJ2</p>
 <a href="https://www.roblox.com/users/637286488/profile"><p>You can Add me!</p>
-<button>LegendRico765</button>
+<button>Contact</button>
 
 </body>
 </html>
